--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
   <h1 style="visibility: hidden"></h1>
+  <h2>Меню</h2>
+  <ul>
+    <li><a href="#halls">Залы</a></li>
+    <li><a href="#about"> О нас</a></li>
+    <li><a href="#">Бронь</a></li>
+    <li><a href="#">Отзывы</a></li>
+    <li><a href="#contact">Контакты</a></li>
+  </ul>
   <h2>У нас есть всё для отличного отдыха с друзьями!</h2>
   <ul>
     <li>VR очки</li>
@@ -16,15 +24,15 @@
     <li>PlayStation 5</li>
   </ul>
 
-  <h2>Наши залы</h2>
+  <h2 id="halls">Наши залы</h2>
   <ol>
-    <li>80's vibes</li>
-    <li>Star wars</li>
-    <li>Wild west</li>
-    <li>Neon style</li>
+    <li><a href="vibes.html">80's vibes</a></li>
+    <li><a href="starwars.html">Star wars</a></li>
+    <li><a href="wildwest.html">Wild west</a></li>
+    <li><a href="neon.html">Neon style</a></li>
   </ol>
 
-  <h2>О нас</h2>
+  <h2 id="about">О нас</h2>
   <p>
     Для наших гостей мы создали
     <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.
@@ -32,5 +40,15 @@
   <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.</p>
   <blockquote><strong lang="en">GAME OVER</strong> - это место незабываемых впечатлений</blockquote>
   <blockquote><i>Аркадий Абакшин, создатель игровой территории GAME OVER</i></blockquote>
+
+<h2 id="contact">Контакты</h2>
+<p>г. Москва ул. Аквамарина, 16</p>
+<a href="tel:+7950930-28-93">8(950)930-28-93</a>
+<br><br>
+<a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a>
+<ul>
+  <li><a href="#">Vkontakte</a></li>
+  <li><a href="#">Telegram</a></li>
+</ul>
 </body>
 </html>
