--- a/index.html
+++ b/index.html
@@ -3,43 +3,82 @@
 <head>
   <meta charset="UTF-8">
   <title>Game Over - игровое пространство виртуальной реальности</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
+  <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#000000">
+  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <h1 style="visibility: hidden"></h1>
-  <h2>Меню</h2>
-  <ul>
-    <li><a href="#halls">Залы</a></li>
-    <li><a href="#about"> О нас</a></li>
-    <li><a href="#">Бронь</a></li>
-    <li><a href="#">Отзывы</a></li>
-    <li><a href="#contact">Контакты</a></li>
-  </ul>
-  <h2>У нас есть всё для отличного отдыха с друзьями!</h2>
-  <ul>
-    <li>VR очки</li>
-    <li>Аудио-система 5.1 с отличным звуком</li>
-    <li>Караоке (4 микрофона)</li>
-    <li>Настольные игры</li>
-    <li>Кино сервисы Netflix, IVI, MegoGO, КиноПоиск, Okko</li>
-    <li>PlayStation 5</li>
-  </ul>
+<h1 style="visibility: hidden"></h1>
+<img src="img/logo.svg" alt="логотип Game Over (чёрные буквы G и O на чёрном фоне)">
+<h2>Меню</h2>
+<ul>
+  <li><a href="#halls">Залы</a></li>
+  <li><a href="#about"> О нас</a></li>
+  <li><a href="#">Бронь</a></li>
+  <li><a href="#">Отзывы</a></li>
+  <li><a href="#contact">Контакты</a></li>
+</ul>
+<h2>У нас есть всё для отличного отдыха с друзьями!</h2>
+<ul>
+  <li>
+    <figure>
+      <img src="img/vr.jpg" alt="мужчина в VR-очках" height="228">
+      <figcaption>VR очки</figcaption>
+    </figure>
+  </li>
+  <li>
+    <figure>
+      <img src="img/audio.jpg" alt="DJ-пульт" height="228">
+      <figcaption>Аудио-система 5.1 с отличным звуком</figcaption>
+    </figure>
+  </li>
+  <li>
+    <figure>
+      <img src="img/micro.jpg" alt="девушка, поющая в микрофон" height="228">
+      <figcaption>Караоке (4 микрофона)</figcaption>
+    </figure>
+  </li>
+  <li>
+    <figure>
+      <img src="img/game.jpg" alt="настольная игра" height="228">
+      <figcaption>Настольные игры</figcaption>
+    </figure>
+  </li>
+  <li>
+    <figure>
+      <img src="img/netflix.jpg" alt="телевизор с логотипом Netflix" height="228">
+      <figcaption>Кино сервисы Netflix, IVI, MegoGO, КиноПоиск, Okko</figcaption>
+    </figure>
+  </li>
+  <li>
+    <figure>
+      <img src="img/sony.jpg" alt="монитор с заставкой игры 'Call of Duty Warzone'" height="228">
+      <figcaption>PlayStation 5</figcaption>
+    </figure>
+  </li>
+</ul>
 
-  <h2 id="halls">Наши залы</h2>
-  <ol>
-    <li><a href="vibes.html">80's vibes</a></li>
-    <li><a href="starwars.html">Star wars</a></li>
-    <li><a href="wildwest.html">Wild west</a></li>
-    <li><a href="neon.html">Neon style</a></li>
-  </ol>
+<h2 id="halls">Наши залы</h2>
+<ol>
+  <li><a href="vibes.html">80's vibes</a></li>
+  <li><a href="starwars.html">Star wars</a></li>
+  <li><a href="wildwest.html">Wild west</a></li>
+  <li><a href="neon.html">Neon style</a></li>
+</ol>
 
-  <h2 id="about">О нас</h2>
-  <p>
-    Для наших гостей мы создали
-    <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.
-  </p>
-  <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.</p>
-  <blockquote><strong lang="en">GAME OVER</strong> - это место незабываемых впечатлений</blockquote>
-  <blockquote><i>Аркадий Абакшин, создатель игровой территории GAME OVER</i></blockquote>
+<h2 id="about">О нас</h2>
+<p>
+  Для наших гостей мы создали
+  <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.
+</p>
+<p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.</p>
+<blockquote><strong lang="en">GAME OVER</strong> - это место незабываемых впечатлений</blockquote>
+<blockquote><i>Аркадий Абакшин, создатель игровой территории GAME OVER</i></blockquote>
 
 <h2 id="contact">Контакты</h2>
 <p>г. Москва ул. Аквамарина, 16</p>
