--- a/index.html
+++ b/index.html
@@ -13,197 +13,255 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-<h1 style="visibility: hidden"></h1>
-<img src="img/logo.svg" alt="логотип Game Over (чёрные буквы G и O на чёрном фоне)">
-<h2>Меню</h2>
-<ul>
-  <li><a href="#halls">Залы</a></li>
-  <li><a href="#about"> О нас</a></li>
-  <li><a href="#">Бронь</a></li>
-  <li><a href="#">Отзывы</a></li>
-  <li><a href="#contact">Контакты</a></li>
-</ul>
-<h2>У нас есть всё для отличного отдыха с друзьями!</h2>
-<ul>
-  <li>
-    <figure>
-      <img src="img/vr.jpg" alt="мужчина в VR-очках" height="228">
-      <figcaption>VR очки</figcaption>
-    </figure>
-  </li>
-  <li>
-    <figure>
-      <img src="img/audio.jpg" alt="DJ-пульт" height="228">
-      <figcaption>Аудио-система 5.1 с отличным звуком</figcaption>
-    </figure>
-  </li>
-  <li>
-    <figure>
-      <img src="img/micro.jpg" alt="девушка, поющая в микрофон" height="228">
-      <figcaption>Караоке (4 микрофона)</figcaption>
-    </figure>
-  </li>
-  <li>
-    <figure>
-      <img src="img/game.jpg" alt="настольная игра" height="228">
-      <figcaption>Настольные игры</figcaption>
-    </figure>
-  </li>
-  <li>
-    <figure>
-      <img src="img/netflix.jpg" alt="телевизор с логотипом Netflix" height="228">
-      <figcaption>Кино сервисы Netflix, IVI, MegoGO, КиноПоиск, Okko</figcaption>
-    </figure>
-  </li>
-  <li>
-    <figure>
-      <img src="img/sony.jpg" alt="монитор с заставкой игры 'Call of Duty Warzone'" height="228">
-      <figcaption>PlayStation 5</figcaption>
-    </figure>
-  </li>
-</ul>
+<header>
+  <h1 style="visibility: hidden"></h1>
+  <img src="img/logo.svg" alt="логотип Game Over (чёрные буквы G и O на чёрном фоне)">
+  <section>
+    <h2>Меню</h2>
+    <nav>
+      <ul>
+        <li><a href="#halls">Залы</a></li>
+        <li><a href="#about"> О нас</a></li>
+        <li><a href="#booking">Бронь</a></li>
+        <li><a href="#review">Отзывы</a></li>
+        <li><a href="#contact">Контакты</a></li>
+      </ul>
+    </nav>
+  </section>
+</header>
 
-<h2 id="halls">Наши залы</h2>
-<ol>
-  <li><a href="vibes.html">80's vibes</a></li>
-  <li><a href="starwars.html">Star wars</a></li>
-  <li><a href="wildwest.html">Wild west</a></li>
-  <li><a href="neon.html">Neon style</a></li>
-</ol>
+<main>
+  <section>
+    <h2>У нас есть всё для отличного отдыха с друзьями!</h2>
+    <ul>
+      <li>
+        <figure>
+          <img src="img/vr.jpg" alt="мужчина в VR-очках" height="228">
+          <figcaption>VR очки</figcaption>
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="img/audio.jpg" alt="DJ-пульт" height="228">
+          <figcaption>Аудио-система 5.1 с отличным звуком</figcaption>
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="img/micro.jpg" alt="девушка, поющая в микрофон" height="228">
+          <figcaption>Караоке (4 микрофона)</figcaption>
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="img/game.jpg" alt="настольная игра" height="228">
+          <figcaption>Настольные игры</figcaption>
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="img/netflix.jpg" alt="телевизор с логотипом Netflix" height="228">
+          <figcaption>Кино сервисы Netflix, IVI, MegoGO, КиноПоиск, Okko</figcaption>
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="img/sony.jpg" alt="монитор с заставкой игры 'Call of Duty Warzone'" height="228">
+          <figcaption lang="en">PlayStation 5</figcaption>
+        </figure>
+      </li>
+    </ul>
+  </section>
 
-<div style="width: 30%">
-  <form action="https://jsonplaceholder.typicode.com/posts" method="post">
-    <h2>Забронировать</h2>
-    <fieldset>
+  <section>
+    <h2 id="halls">Наши залы</h2>
+    <ol>
+      <li lang="en"><a href="vibes.html">80's vibes</a></li>
+      <li lang="en"><a href="starwars.html">Star wars</a></li>
+      <li lang="en"><a href="wildwest.html">Wild west</a></li>
+      <li lang="en"><a href="neon.html">Neon style</a></li>
+    </ol>
+  </section>
+
+  <section style="width: 30%">
+    <h2 id="booking">Забронировать зал просто</h2>
+    <form action="https://jsonplaceholder.typicode.com/posts" method="post">
+      <section>
+        <h3>Выбери зал</h3>
+        <fieldset>
+          <label>
+            <input type="radio" name="hall" value="vibes" lang="en">
+            80's vibes
+          </label>
+          <label>
+            <input type="radio" name="hall" value="starWars" lang="en">
+            Star wars
+          </label>
+          <label>
+            <input type="radio" name="hall" value="wildWest" lang="en">
+            Wild west
+          </label>
+          <label>
+            <input type="radio" name="hall" value="neon" lang="en">
+            Neon style
+          </label>
+        </fieldset>
+      </section>
+
+      <section>
+        <h3>Собери набор развлечений</h3>
+        <fieldset>
+          <label>
+            <input type="radio" name="console" value="PlayStation" lang="en">
+            PlayStation
+          </label>
+          <label>
+            <input type="radio" name="console" value="Sega" lang="en">
+            Sega Mega Drive
+          </label>
+          <label>
+            <input type="radio" name="console" value="xBox" lang="en">
+            X-box One S
+          </label>
+          <label>
+            <input type="radio" name="console" value="Dendy" lang="en">
+            Dendy
+          </label>
+        </fieldset>
+
+        <fieldset>
+          <legend>Настольные игры</legend>
+          <label>
+            <input type="checkbox" name="boardGames" value="Jenga" lang="en">
+            Jenga
+          </label>
+          <label>
+            <input type="checkbox" name="boardGames" value="Monopoly" lang="en">
+            Monopoly
+          </label>
+          <label>
+            <input type="checkbox" name="boardGames" value="Манчкин">
+            Манчкин
+          </label>
+          <label>
+            <input type="checkbox" name="boardGames" value="Alias" lang="en">
+            Alias
+          </label>
+        </fieldset>
+
+        <fieldset>
+          <legend>Дополнительно</legend>
+          <label>
+            <input type="checkbox" name="additional" value="Караоке">
+            Караоке
+          </label>
+          <label>
+            <input type="checkbox" name="additional" value="VR" lang="en">
+            VR
+          </label>
+        </fieldset>
+      </section>
+
+      <section>
+        <h3>Выбери дату и время</h3>
+        <fieldset>
+          <label>Дата<abbr title="required">*</abbr>
+            <input type="date" name="date" required>
+          </label>
+          <label>Время<abbr title="required">*</abbr>
+            <input type="time" name="time" required>
+          </label>
+          <br>
+          <label>Количество человек<abbr title="required">*</abbr>
+            <input type="text" name="guestAmount" required>
+          </label>
+          <br>
+          <label>Имя<abbr title="required">*</abbr>
+            <input type="text" name="firstName" required>
+          </label>
+          <br>
+          <label>Фамилия<abbr title="required">*</abbr>
+            <input type="text" name="lastName" required>
+          </label>
+          <br>
+          <label>Номер телефона<abbr title="required">*</abbr>
+            <input type="tel" name="tel" required>
+          </label>
+          <label>
+            <input type="checkbox" name="adult" value="yes">
+            Я старше 18 лет
+          </label>
+        </fieldset>
+      </section>
+      <button type="submit">Забронировать</button>
       <label>
-        <input type="radio" name="hall" value="vibes">
-        80's vibes
+        <input type="checkbox" name="personalData" value="yes">
+        Согласен на обработку персональных данных
       </label>
-      <label>
-        <input type="radio" name="hall" value="starWars">
-        Star wars
-      </label>
-      <label>
-        <input type="radio" name="hall" value="wildWest">
-        Wild west
-      </label>
-      <label>
-        <input type="radio" name="hall" value="neon">
-        Neon style
-      </label>
-    </fieldset>
+    </form>
+  </section>
 
-    <fieldset>
-      <legend>Собери набор развлечений</legend>
+  <section>
+    <h2 id="about">О нас</h2>
+    <p>
+      Для наших гостей мы создали
+      <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.
+    </p>
+    <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.</p>
+    <blockquote><strong lang="en">GAME OVER</strong> - это место незабываемых впечатлений</blockquote>
+    <blockquote><i>Аркадий Абакшин, создатель игровой территории GAME OVER</i></blockquote>
+  </section>
 
-      <fieldset>
-        <legend>Собери набор развлечений</legend>
-        <label>
-          <input type="radio" name="console" value="PlayStation">
-          PlayStation
-        </label>
-        <label>
-          <input type="radio" name="console" value="Sega">
-          Sega Mega Drive
-        </label>
-        <label>
-          <input type="radio" name="console" value="xBox">
-          X-box One S
-        </label>
-        <label>
-          <input type="radio" name="console" value="Dendy">
-          Dendy
-        </label>
-      </fieldset>
+  <section>
+    <h2 id="review">Отзывы посетителей</h2>
+    <div>
+      <figure>
+        <img src="#" alt="фото пользователя, оставившего отзыв">
+        <figcaption>
+          Макс Самойлов
+        </figcaption>
+      </figure>
+      <p>
+        Отмечали здесь день рождения с компанией друзей, все было очень круто! VR очки это просто бомба, никогда еще я не был в таком полном игровом погружении. Сервис на высоте!
+      </p>
+    </div>
 
-      <fieldset>
-        <legend>Настольные игры</legend>
-        <label>
-          <input type="checkbox" name="boardGames" value="Jenga">
-          Jenga
-        </label>
-        <label>
-          <input type="checkbox" name="boardGames" value="Monopoly">
-          Monopoly
-        </label>
-        <label>
-          <input type="checkbox" name="boardGames" value="Манчкин">
-          Манчкин
-        </label>
-        <label>
-          <input type="checkbox" name="boardGames" value="Alias">
-          Alias
-        </label>
-      </fieldset>
+    <div>
+      <figure>
+        <img src="#" alt="фото пользователя, оставившего отзыв">
+        <figcaption>
+          Оксана Григорьева
+        </figcaption>
+      </figure>
+      <p>
+        Были в комнате Дикий Запад, пели в караоке под Шакиру, отличный получился корпоратив! У нас в городе больше нет подобных заведений
+      </p>
+    </div>
 
-      <fieldset>
-        <legend>Дополнительно</legend>
-        <label>
-          <input type="checkbox" name="additional" value="Караоке">
-          Караоке
-        </label>
-        <label>
-          <input type="checkbox" name="additional" value="VR">
-          VR
-        </label>
-      </fieldset>
+    <div>
+      <figure>
+        <img src="#" alt="фото пользователя, оставившего отзыв">
+        <figcaption>
+          Никита Ященко
+        </figcaption>
+      </figure>
+      <p>
+        Немного подвисала игра в VR очках, а так все норм. Крутое оформление комнаты в стиле звездных войн, попал в атмосферу космоса
+      </p>
+    </div>
+  </section>
+</main>
 
-      <fieldset>
-        <legend>Выбери дату и время</legend>
-        <label>Дата<abbr title="required">*</abbr>
-          <input type="date" name="date" required>
-        </label>
-        <label>Время<abbr title="required">*</abbr>
-          <input type="time" name="time" required>
-        </label>
-        <br>
-        <label>Количество человек<abbr title="required">*</abbr>
-          <input type="text" name="guestAmount" required>
-        </label>
-        <br>
-        <label>Имя<abbr title="required">*</abbr>
-          <input type="text" name="firstName" required>
-        </label>
-        <br>
-        <label>Фамилия<abbr title="required">*</abbr>
-          <input type="text" name="lastName" required>
-        </label>
-        <br>
-        <label>Номер телефона<abbr title="required">*</abbr>
-          <input type="tel" name="tel" required>
-        </label>
-        <label>
-          <input type="checkbox" name="adult" value="yes">
-          Я старше 18 лет
-        </label>
-      </fieldset>
-    </fieldset>
-    <br>
-    <button type="submit">Забронировать</button>
-    <label>
-      <input type="checkbox" name="personalData" value="yes">
-      Согласен на обработку персональных данных
-    </label>
-  </form>
-</div>
-
-<h2 id="about">О нас</h2>
-<p>
-  Для наших гостей мы создали
-  <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.
-</p>
-<p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.</p>
-<blockquote><strong lang="en">GAME OVER</strong> - это место незабываемых впечатлений</blockquote>
-<blockquote><i>Аркадий Абакшин, создатель игровой территории GAME OVER</i></blockquote>
-
-<h2 id="contact">Контакты</h2>
-<p>г. Москва ул. Аквамарина, 16</p>
-<a href="tel:+7950930-28-93">8(950)930-28-93</a>
-<br><br>
-<a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a>
-<ul>
-  <li><a href="#">Vkontakte</a></li>
-  <li><a href="#">Telegram</a></li>
-</ul>
+<footer>
+  <h2 id="contact">Контакты</h2>
+  <p>г. Москва ул. Аквамарина, 16</p>
+  <a href="tel:+7950930-28-93">8(950)930-28-93</a>
+  <br><br>
+  <a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a>
+  <ul>
+    <li><a href="#">Vkontakte</a></li>
+    <li><a href="#">Telegram</a></li>
+  </ul>
+</footer>
 </body>
 </html>
