--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <h2 id="review">Отзывы посетителей</h2>
     <div>
       <figure>
-        <img src="#" alt="фото пользователя, оставившего отзыв">
+        <img src="#" alt="фото пользователя, оставившего отзыв на сайте">
         <figcaption>
           Макс Самойлов
         </figcaption>
