--- a/index.html
+++ b/index.html
@@ -150,15 +150,23 @@
 
     <section class="about">
       <h2 class="about__title h2-title">О нас</h2>
-      <p class="about__text"> Для наших гостей мы создали концептуально новое игровое пространство виртуальной реальности в центральной части города.</p>
-      <p class="about__text">Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.</p>
-      <div class="about__quote-wrapper">
-        <p class="about__quote about__quote-top">GAME OVER &mdash;</p>
-        <p class="about__quote about__quote-bottom">это место незабываемых впечатлений</p>
-      </div>
-      <div class="about__cite">
-        <img src="img/boss.png" alt="фото Аркадия Абакшина, создателя GAME OVER">
-        <p class="about__cite-text about__text">Аркадий Абакшин, создатель игровой территории GAME OVER</p>
+      <div class="about__wrapper">
+        <div class="about__img"></div>
+        <div class="about__info">
+          <div class="about__text-wrapper">
+            <p class="about__text"> Для наших гостей мы создали концептуально новое игровое пространство виртуальной реальности в центральной части города.</p>
+            <p class="about__text">Каждый день мы стараемся создавать для&nbsp;вас&nbsp;самую лучшую игровую атмосферу и&nbsp;радовать&nbsp;Вас&nbsp;топовыми игровыми разработками со&nbsp;всего&nbsp;мира.</p>
+          </div>
+
+          <div class="about__quote-wrapper">
+            <p class="about__quote about__quote-top">GAME OVER &mdash;</p>
+            <p class="about__quote about__quote-bottom">это место незабываемых впечатлений</p>
+          </div>
+          <div class="about__cite">
+            <img class="about__cite-img" src="img/boss.png" alt="фото Аркадия Абакшина, создателя GAME OVER">
+            <p class="about__cite-text about__text">Аркадий&nbsp;Абакшин, создатель&nbsp;игровой территории&nbsp;GAME&nbsp;OVER</p>
+          </div>
+        </div>
       </div>
     </section>
 
