--- a/index.html
+++ b/index.html
@@ -170,6 +170,45 @@
       </div>
     </section>
 
+    <section class="review">
+      <h2 class="review__title h2-title">Отзывы посетителей</h2>
+      <div class="review__item">
+        <figure class="review__user">
+          <img class="review__user-img" src="img/review/guest1.png" alt="фото пользователя, оставившего отзыв">
+          <figcaption class="review__user-name">
+            Макс Самойлов
+          </figcaption>
+        </figure>
+        <p class="review__text">
+          Отмечали здесь день рождения с компанией друзей, все было очень круто! VR очки это просто бомба, никогда еще я не был в таком полном игровом погружении. Сервис на высоте!
+        </p>
+      </div>
+
+       <div class="review__item">
+        <figure class="review__user">
+          <img class="review__user-img" src="img/review/guest2.png" alt="фото пользователя, оставившего отзыв">
+          <figcaption class="review__user-name">
+            Оксана Григорьева
+          </figcaption>
+        </figure>
+        <p class="review__text">
+          Были в комнате Дикий Запад, пели в караоке под Шакиру, отличный получился корпоратив! У нас в городе больше нет подобных заведений
+        </p>
+      </div>
+
+      <div class="review__item">
+        <figure class="review__user">
+          <img class="review__user-img" src="img/review/guest3.png" alt="фото пользователя, оставившего отзыв">
+          <figcaption class="review__user-name">
+            Никита Ященко
+          </figcaption>
+        </figure>
+        <p class="review__text">
+          Немного подвисала игра в VR очках, а так все норм. Крутое оформление комнаты в стиле звездных войн, попал в атмосферу космоса
+        </p>
+      </div>
+    </section>
+
     <section class="faq">
       <h2 class="faq__title h2-title">Частые вопросы</h2>
       <ul class="faq__list">
