corrected HTML and CSS

--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
               <div class="booking__entertainment-item-wrapper">
                 <label class="booking__entertainment-radio-label">
                   <input class="radio-input booking__entertainment-radio" type="radio" name="console" value="PlayStation" lang="en" tabindex="6">
-                  <span>PlayStation</span>
+                  PlayStation
                 </label>
                 <label class="booking__entertainment-radio-label">
                   <input class="radio-input booking__entertainment-radio" type="radio" name="console" value="Sega" lang="en" tabindex="-1">
-                  <span>Sega Mega Drive</span>
+                  Sega Mega Drive
                 </label>
                 <label class="booking__entertainment-radio-label">
                   <input class="radio-input booking__entertainment-radio" type="radio" name="console" value="xBox" lang="en" tabindex="-1">
-                  <span>X-box One S</span>
+                  X-box One S
                 </label>
                 <label class="booking__entertainment-radio-label">
                   <input class="radio-input booking__entertainment-radio" type="radio" name="console" value="Dendy" lang="en" tabindex="-1">
-                  <span>Dendy</span>
+                  Dendy
                 </label>
               </div>
             </fieldset>
@@ -144,24 +144,22 @@
             <fieldset>
               <legend class="booking__subtitle booking__subtitle--margin-bottom">Настольные игры</legend>
               <div class="booking__entertainment-item-wrapper">
-                <div class="booking__entertainment-item-wrapper">
-                  <label class="booking__entertainment-checkbox-label">
-                    <input class="booking__entertainment-checkbox checkbox-input" type="checkbox" name="boardGames" value="Jenga" lang="en" tabindex="7">
-                    <span>Jenga</span>
-                  </label>
-                  <label class="booking__entertainment-checkbox-label">
-                    <input class="booking__entertainment-checkbox checkbox-input" type="checkbox" name="boardGames" value="Monopoly" lang="en" tabindex="7">
-                    <span>Monopoly</span>
-                  </label>
-                  <label class="booking__entertainment-checkbox-label">
-                    <input class="booking__entertainment-checkbox checkbox-input" type="checkbox" name="boardGames" value="Манчкин" tabindex="7">
-                    <span>Манчкин</span>
-                  </label>
-                  <label class="booking__entertainment-checkbox-label">
-                    <input class="booking__entertainment-checkbox checkbox-input" type="checkbox" name="boardGames" value="Alias" lang="en" tabindex="7">
-                    <span>Alias</span>
-                  </label>
-                </div>
+                <label class="booking__entertainment-checkbox-label">
+                  <input class="booking__entertainment-checkbox checkbox-input" type="checkbox" name="boardGames" value="Jenga" lang="en" tabindex="7">
+                  Jenga
+                </label>
+                <label class="booking__entertainment-checkbox-label">
+                  <input class="booking__entertainment-checkbox checkbox-input" type="checkbox" name="boardGames" value="Monopoly" lang="en" tabindex="7">
+                  Monopoly
+                </label>
+                <label class="booking__entertainment-checkbox-label">
+                  <input class="booking__entertainment-checkbox checkbox-input" type="checkbox" name="boardGames" value="Манчкин" tabindex="7">
+                  Манчкин
+                </label>
+                <label class="booking__entertainment-checkbox-label">
+                  <input class="booking__entertainment-checkbox checkbox-input" type="checkbox" name="boardGames" value="Alias" lang="en" tabindex="7">
+                  Alias
+                </label>
               </div>
             </fieldset>
 
